hphp/hack/test/typecheck/mayberx11.php.like_types.exp
File "mayberx11.php", line 5, characters 10-17:
Invalid return type (Typing[4110])
File "mayberx11.php", line 4, characters 46-48:
Expected int
File "mayberx11.php", line 5, characters 10-17:
But got num because this is the result of an arithmetic operation
